@@ -182,8 +182,6 @@ void SVGTRefElement::svgAttributeChanged(const QualifiedName& attrName)
     SVGElementInstance::InvalidationGuard invalidationGuard(this);
 
     if (SVGURIReference::isKnownAttribute(attrName)) {
-        if (!inDocument())
-            return;
         if (m_eventListener) {
             m_eventListener->removeFromTarget();
             m_eventListener = 0;
